--- a/package.json
+++ b/package.json
@@ -1,29 +1,14 @@
 {
-    "name": "node-workshop",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "watch": "nodemon src/http-server",
-        "start": "nodemon src/index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Samadmemon991/Node-workshop.git"
-    },
-    "keywords": [
-        "node",
-        "learning"
-    ],
-    "author": "samadmemon991",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/Samadmemon991/Node-workshop/issues"
-    },
-    "homepage": "https://github.com/Samadmemon991/Node-workshop#readme",
-    "dependencies": {
-        "express": "^4.18.2",
-        "nodemon": "^3.0.1"
-    }
+  "name": "node-workshop",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "cookie-parser": "~1.4.6",
+    "debug": "~4.3.4",
+    "express": "~4.18.2",
+    "morgan": "~1.10.0"
+  }
 }
