--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "node-workshop",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "cookie-parser": "~1.4.6",
-    "debug": "~4.3.4",
-    "express": "~4.18.2",
-    "morgan": "~1.10.0"
-  }
+    "name": "node-workshop",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "start": "nodemon ./bin/www"
+    },
+    "dependencies": {
+        "cookie-parser": "~1.4.6",
+        "debug": "~4.3.4",
+        "dotenv": "^16.3.1",
+        "express": "~4.18.2",
+        "mongoose": "^7.4.0",
+        "morgan": "~1.10.0"
+    }
 }
