--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "debug": "~4.3.4",
         "dotenv": "^16.3.1",
         "express": "~4.18.2",
+        "jsonwebtoken": "^9.0.1",
         "mongoose": "^7.4.0",
         "morgan": "~1.10.0"
     }
